# deleprep

./: FEATURES.md  LICENSE  docker-compose.yml  setup.sh
backend/: Dockerfile  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 0373b44b4dcc_init.py  2bc79fb8a54b_add_exams_and_spaced_repetition.py
backend/src/deleprep/: __init__.py  ai.py  auth.py  config.py  database.py  main.py  models.py  schemas.py  seed.py
backend/src/deleprep/routers/: auth.py  exams.py  skills.py  tasks.py
backend/tests/: test_ai.py  test_exams.py
frontend/: .cta.json  Dockerfile  Dockerfile.prod  package-lock.json  package.json  patch_app.py  vite.config.ts
frontend/src/: routeTree.gen.ts
frontend/src/components/: Header.tsx
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/__tests__/: -index.test.tsx
frontend/src/routes/exam/: index.tsx
mock-llm/: Dockerfile  main.py
